version: "89c076e-dirty"
opam-version: "1.2"
name: "dryunit"
version: "0.2.0"
maintainer: "gerson.xp@gmail.com"
authors: ["Gerson Moraes"]
homepage: "https://bitbucket.org/gsmoraes/ppx_dryunit"
bug-reports: "https://bitbucket.org/gsmoraes/ppx_dryunit"
dev-repo: "https://bitbucket.org/gsmoraes/ppx_dryunit"
available: [ ocaml-version >= "4.02.3" & ocaml-version < "4.06" ]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
  "ppx_dryunit"
]
