opam-version: "1.2"
name: "dryunit"
version: "0.6.0"
maintainer: "gerson.xp@gmail.com"
authors: ["Gerson Moraes"]
homepage: "https://github.com/gersonmoraes/dryunit"
bug-reports: "https://github.com/gersonmoraes/dryunit"
dev-repo: "https://github.com/gersonmoraes/dryunit.git"
available: [ ocaml-version >= "4.03.0" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build}
  "cmdliner" {>= "1.0.2"}
]
