opam-version: "1.2"
name: "dryunit"
version: "0.6.1"
maintainer: "gerson.xp@gmail.com"
authors: ["Gerson Moraes"]
homepage: "https://github.com/gersonmoraes/dryunit"
bug-reports: "https://github.com/gersonmoraes/dryunit"
dev-repo: "https://github.com/gersonmoraes/dryunit.git"
available: [ ocaml-version >= "4.03.0" ]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
  "cmdliner" {>= "1.0.2"}
]
