version: "89c076e-dirty"
opam-version: "1.2"
version: "0.0.4"
maintainer: "gerson.xp@gmail.com"
authors: ["Gerson Moraes"]
homepage: "https://bitbucket.org/gsmoraes/ppx_dryunit"
bug-reports: "https://bitbucket.org/gsmoraes/ppx_dryunit"
dev-repo: "https://bitbucket.org/gsmoraes/ppx_dryunit"
available: [ ocaml-version >= "4.02.3" & ocaml-version < "4.06" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
  "cppo" {build}
]
