opam-version: "1.2"
version: "0.3.0"
maintainer: "gerson.xp@gmail.com"
authors: ["Gerson Moraes"]
homepage: "https://bitbucket.org/gsmoraes/ppx_dryunit"
bug-reports: "https://bitbucket.org/gsmoraes/ppx_dryunit"
dev-repo: "https://bitbucket.org/gsmoraes/ppx_dryunit"
available: [ ocaml-version >= "4.02.3" & ocaml-version < "4.06" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: []

depends: [
  "jbuilder" {build}
  "cppo" {build}
  "ocaml-migrate-parsetree" {build}
  "ppx_tools_versioned" {build}
]
